# WebsiteProductPlacement

./: .gitignore  CNAME  Dockerfile  Makefile  README.md  README_en.md  README_ru.md  docker-compose.yml  garage.nginx.conf  index.html  info  info.txt  pyproject.toml  requirements.txt  run.sh
advertisements/: Dockerfile  Makefile  README.md  db.sqlite3  manage.py  pyproject.toml
advertisements/advertisements/: README.md  asgi.py  config.py  doc.md  info.txt  secret_setting.py  secrets_settings.py  settings.py  urls.py  wsgi.py
advertisements/app_advertisements/: README.md  admin.py  apps.py  doc.md  forms.py  models.py  urls.py  views.py
advertisements/app_advertisements/migrations/: 0001_initial.py  0002_advertisement_contact_advertisement_email_and_more.py  0002_alter_advertisement_table.py  0003_alter_advertisement_options.py  0003_remove_advertisement_email.py  0004_advertisement_user.py  0004_remove_advertisement_contact_advertisement_email.py  0005_advertisement_image.py  0005_alter_advertisement_image.py  (+10 more)
advertisements/app_auth/: README.md  forms.py  urls.py  views.py
advertisements/app_lesson_4/: apps.py  views.py
advertisements/media/: README.md
advertisements/static/: README.md
advertisements/templates/: % url 'advertisement' %  404.html  README.md  advertisement-AK-74.html  advertisement-laptop.html  advertisement-post.html  advertisement-rtx.html  advertisement.html  base.html  basemaps.html  basetwo.html  basewinproduct.html  doc.md  fake.html  index.html  login.html  profile.html  register.html  time.html  top-sellers.html
data/: db.sqlite3
(+31 files in other folders)
