[tool.poetry]
name = "My_Django"
version = "0.1.0"
description = ""
authors = ["Your Name <sergejlebedev31838@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pillow = "^10.0.0"
django = "^4.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
